@@ -1,6 +1,8 @@
 ==
 
 * set delegate default no longer freezes value
+* added :duplicate_default attribute to turn off default
+  value duplication
 
 == 0.4.1 / 2009-03-23
 
